# eigen_linear_mpc

./: .gitignore  CMakeLists.txt  README.md  package.xml
cmake/: LinMpcEigenConfig.cmake
include/: BpmpdOptimization.h  EigenLinearMpc.h  EigenLinearMpc.hpp  LinMpcEigen.hpp  OsqpEigenOptimization.hpp  QpProblem.hpp
lib/: BPMPD.PAR  BPMPDLL.TXT  QPDATA.PS
src/: BpmpdOptimization.cpp  EigenLinearMpc.cpp  LinMpcEigen.cpp  OsqpEigenOptimization.cpp  test_example.cpp  test_example_2.cpp  test_example_3.cpp
